# paychains-program-library

./: Anchor.toml  LICENSE  README.md  patch.crates-io.sh  update-solana-dependencies.sh
associated-token-account/program/: Cargo.toml  run-tests.sh
associated-token-account/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
associated-token-account/program/src/tools/: account.rs
associated-token-account/program/tests/: process_create_associated_token_account.rs  program_test.rs
binary-oracle-pair/program/: Cargo.toml
binary-oracle-pair/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
binary-oracle-pair/program/tests/: tests.rs
examples/rust/custom-heap/: Cargo.toml
examples/rust/custom-heap/src/: entrypoint.rs  processor.rs
examples/rust/custom-heap/tests/: functional.rs
farms/farm-client/: Cargo.toml
farms/farm-client/src/: client.rs  error.rs
farms/farm-client/src/cli/: config.rs  main.rs  printer.rs
farms/farm-client/src/client/: farm_accounts_orca.rs  farm_accounts_raydium.rs  farm_accounts_saber.rs  farm_instructions.rs  governance_instructions.rs  pool_accounts_orca.rs  pool_accounts_raydium.rs  pool_accounts_saber.rs  pool_instructions.rs  refdb_instructions.rs  system_instructions.rs  vault_instructions.rs  vault_stc_accounts_raydium.rs  vault_stc_accounts_saber.rs
farms/farm-client/tests/: orca_pools.rs  raydium_pools.rs  raydium_vaults.rs  saber_pools.rs  saber_vaults.rs
farms/farm-client/tests/pool_actions/: mod.rs
farms/farm-client/tests/utils/: mod.rs
farms/farm-client/tests/vault_actions/: mod.rs
farms/router-main/: Cargo.toml
farms/router-main/src/: add_farm.rs  add_pool.rs  add_token.rs  add_vault.rs  processor.rs  refdb_init.rs  refdb_instruction.rs  remove_farm.rs  remove_pool.rs  remove_token.rs  remove_vault.rs
farms/router-orca/: Cargo.toml
farms/router-orca/src/: add_liquidity.rs  harvest.rs  processor.rs  remove_liquidity.rs  stake.rs  swap.rs  unstake.rs  user_init.rs
farms/router-saber/: Cargo.toml
farms/router-saber/src/: add_liquidity.rs  harvest.rs  processor.rs  remove_liquidity.rs  stake.rs  swap.rs  unstake.rs  unwrap_token.rs  user_init.rs  wrap_token.rs
farms/vaults/: Cargo.toml
farms/vaults/src/: clock.rs  entrypoint.rs  traits.rs  user_info.rs  vault_info.rs
farms/vaults/src/strategies/: common.rs
farms/vaults/src/strategies/rdm_stake_lp_compound/: add_liquidity.rs  crank.rs  crank1.rs  crank2.rs  crank3.rs  features.rs  init.rs  lock_liquidity.rs  remove_liquidity.rs  unlock_liquidity.rs  withdraw_fees.rs
farms/vaults/src/strategies/sbr_stake_lp_compound/: add_liquidity.rs  crank.rs  (+13 more)
feature-proposal/cli/: Cargo.toml
feature-proposal/cli/src/: main.rs
feature-proposal/program/: Cargo.toml  run-tests.sh
feature-proposal/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
feature-proposal/program/tests/: functional.rs
governance/test-sdk/: Cargo.toml
governance/test-sdk/src/: cookies.rs  lib.rs  tools.rs
name-service/program/: Cargo.toml
name-service/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
name-service/program/tests/: functional.rs
record/program/: Cargo.toml
record/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
record/program/tests/: functional.rs
shared-memory/program/: Cargo.toml
shared-memory/program/src/: lib.rs
shared-memory/program/tests/: shared-memory.rs
stake-pool/cli/: Cargo.toml  README.md
stake-pool/cli/scripts/: add-validators.sh  deposit.sh  rebalance.sh  setup-stake-pool.sh  setup-test-validator.sh  withdraw.sh
stake-pool/cli/src/: client.rs  main.rs  output.rs
stake-pool/program/: Cargo.toml
stake-pool/program/src/: big_vec.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
stake-pool/program/tests/: decrease.rs  deposit.rs  deposit_authority.rs  deposit_sol.rs  huge_pool.rs  increase.rs  initialize.rs  set_deposit_fee.rs  set_epoch_fee.rs  set_funding_authority.rs  set_manager.rs  set_preferred.rs  set_referral_fee.rs  set_staker.rs  set_withdrawal_fee.rs  update_stake_pool_balance.rs  update_validator_list_balance.rs  vsa_add.rs  vsa_remove.rs  withdraw.rs  withdraw_sol.rs
stake-pool/program/tests/helpers/: mod.rs
token-lending/cli/: Cargo.toml  README.md
token-lending/cli/src/: main.rs
token-lending/program/: Cargo.toml  cbindgen.toml
token-lending/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
token-lending/program/src/math/: common.rs  decimal.rs  rate.rs
token-lending/program/src/state/: last_update.rs  lending_market.rs  mod.rs  obligation.rs  reserve.rs
token-lending/program/tests/: borrow_obligation_liquidity.rs  deposit_obligation_collateral.rs  deposit_reserve_liquidity.rs  flash_loan.rs  init_lending_market.rs  init_obligation.rs  init_reserve.rs  liquidate_obligation.rs  obligation_end_to_end.rs  redeem_reserve_collateral.rs  refresh_obligation.rs  refresh_reserve.rs  repay_obligation_liquidity.rs  set_lending_market_owner.rs  withdraw_obligation_collateral.rs
token-lending/program/tests/fixtures/: README.md
token-lending/program/tests/helpers/: flash_loan_receiver.rs  genesis.rs  mod.rs
token-swap/program/: Cargo.toml  cbindgen.toml
token-swap/program/fuzz/: Cargo.toml
token-swap/program/fuzz/src/: native_account_data.rs  native_processor.rs  native_token.rs  native_token_swap.rs
token-swap/program/src/: constraints.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
token-swap/program/src/curve/: base.rs  constant_price.rs  constant_product.rs  fees.rs  offset.rs  stable.rs
token/cli/: Cargo.toml  README.md
token/cli/src/: bench.rs  config.rs  main.rs  output.rs  rpc_client_utils.rs  sort.rs
token/program/: Cargo.toml
token/program/inc/: token.h
token/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
token/program/tests/: action.rs  assert_instruction_count.rs
utils/test-client/: Cargo.toml
utils/test-client/src/: main.rs
(+450 files in other folders)
