[package]
name = "spl-binary-oracle-pair"
version = "0.1.0"
description = "PayChains Program Library Binary Oracle Pair"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
paychains-program = "1.9.2"
spl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"
borsh = "0.9.1"

[dev-dependencies]
paychains-program-test = "1.9.2"
paychains-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
