[package]
name = "paychains-farm-client"
version = "0.0.1"
description = "PayChains Farm Client"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
homepage = "https://paychains.com/"
edition = "2018"

[features]
debug = []

[dependencies]
log = "0.4.14"
arrayvec = "0.7.2"
arrayref = "0.3.6"
serde = "1.0.130"
clap = "2.33.3"
thiserror = "1.0.30"
bs58 = "0.4.0"
paychains-sdk = "1.9.2"
paychains-client = "1.9.2"
paychains-cli-config = "1.9.2"
paychains-account-decoder = "1.9.2"
paychains-logger = "1.9.2"
paychains-version = "1.9.2"
paychains-farm-sdk = { path = "../farm-sdk" }
paychains-clap-utils = "1.9.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
quarry-mine = { version = "1.10.0", features = ["no-entrypoint"] }
stable-swap-client = "1.5.2"
stable-swap-math = "1.5.3"
chrono = "0.4.19"
base64 = "0.13.0"
bincode = "1.3.3"
num_enum = "0.5.4"

[lib]
name = "paychains_farm_client"
path = "src/lib.rs"

[[bin]]
name = "paychains-farm-client"
path = "src/cli/main.rs"
