[package]
name = "paychains-farm-router-orca"
version = "0.0.1"
description = "PayChains Farm Orca Router"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
homepage = "https://paychains.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
paychains-farm-sdk = { path = "../farm-sdk" }
paychains-program = "1.9.2"
arrayref = "0.3.6"
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
paychains-program-test = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]

