[package]
name = "paychains-farm-router-saber"
version = "0.0.1"
description = "PayChains Farm Saber Router"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
homepage = "https://paychains.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
paychains-farm-sdk = { path = "../farm-sdk" }
paychains-program = "1.9.2"
arrayref = "0.3.6"
stable-swap-client = "1.5.2"
quarry-mine = { version = "1.10.0", features = ["no-entrypoint"] }
quarry-mint-wrapper = { version = "1.10.0", features = ["no-entrypoint"] }
quarry-redeemer = { version = "1.10.0", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
paychains-program-test = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]

