[package]
name = "paychains-farm-vaults"
version = "0.0.1"
description = "PayChains Farm Vaults"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
homepage = "https://paychains.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []
test-bpf = []
RDM-STAKE-LP-COMPOUND = []
SBR-STAKE-LP-COMPOUND = []
default = ["RDM-STAKE-LP-COMPOUND"]

[dependencies]
paychains-farm-sdk = { path = "../farm-sdk" }
paychains-program = "1.9.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[dev-dependencies]
paychains-program-test = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]

