[package]
name = "spl-feature-proposal"
version = "1.0.0"
description = "PayChains Program Library Feature Proposal Program"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9.0"
paychains-program = "1.9.2"
spl-token = { version = "3.2", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
paychains-program-test = "1.9.2"
paychains-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
