[package]
name = "spl-governance-test-sdk"
version = "0.1.0"
description = "PayChains Program Library Governance Program Test SDK"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.127"
serde_derive = "1.0.103"
paychains-program = "1.9.2"
paychains-program-test = "1.9.2"
paychains-sdk = "1.9.2"
spl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
