[package]
name = "spl-name-service"
description = "PayChains Program Library Name Service"
version = "0.2.0"
repository = "https://github.com/paychains-labs/paychains-program-library"
authors = [
  "lcchy <lucas@bonfida.com>",
  "PayChains Maintainers <maintainers@paychains.foundation>"
]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
paychains-program = "1.9.2"
num-traits = "0.2"
borsh = "0.9.1"
num-derive = "0.3.3"
thiserror = "1.0.29"

[dev-dependencies]
paychains-program-test = "1.9.2"
paychains-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
