[package]
name = "spl-record"
version = "0.1.0"
description = "PayChains Program Library Record Program"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
paychains-program = "1.9.2"
thiserror = "1.0"

[dev-dependencies]
paychains-program-test = "1.9.2"
paychains-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
