[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "PayChains Program Library Shared-memory"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
arrayref = "0.3.6"
paychains-program = "=1.9.2"

[dev-dependencies]
paychains-program-test = "=1.9.2"
paychains-sdk = "=1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
