[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2018"
homepage = "https://spl.paychains.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/paychains-labs/paychains-program-library"
version = "0.6.3"

[dependencies]
borsh = "0.9"
clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
paychains-account-decoder = "=1.9.2"
paychains-clap-utils = "=1.9.2"
paychains-cli-config = "=1.9.2"
paychains-cli-output = "1.9.2"
paychains-client = "=1.9.2"
paychains-logger = "=1.9.2"
paychains-program = "=1.9.2"
paychains-remote-wallet = "=1.9.2"
paychains-sdk = "=1.9.2"
spl-associated-token-account = { version = "1.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "0.6", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.2", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
