[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
description = "SPL Token Lending CLI"
edition = "2018"
homepage = "https://spl.paychains.com/token-lending"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/paychains-labs/paychains-program-library"
version = "0.1.0"

[dependencies]
clap = "2.33.3"
paychains-clap-utils = "1.9.2"
paychains-cli-config = "1.9.2"
paychains-client = "1.9.2"
paychains-logger = "1.9.2"
paychains-sdk = "1.9.2"
paychains-program = "1.9.2"
spl-token-lending = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { path="../../token/program", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
