[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
description = "SPL-Token Command-line Utility"
edition = "2018"
homepage = "https://spl.paychains.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/paychains-labs/paychains-program-library"
version = "2.0.15"

[dependencies]
clap = "2.33.3"
console = "0.14.0"
indicatif = "0.16.2"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.68"
paychains-account-decoder = "=1.9.2"
paychains-clap-utils = "=1.9.2"
paychains-cli-config = "=1.9.2"
paychains-cli-output = "=1.9.2"
paychains-client = "=1.9.2"
paychains-logger = "=1.9.2"
paychains-remote-wallet = "=1.9.2"
paychains-sdk = "=1.9.2"
paychains-transaction-status = "=1.9.2"
spl-token = { version = "3.2", path="../program", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-memo = { version = "3.0.1", path="../../memo/program", features = ["no-entrypoint"] }

[[bin]]
name = "spl-token"
path = "src/main.rs"
