[package]
name = "test-client"
version = "0.1.0"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
publish = false
edition = "2018"

# Used to ensure that SPL programs are buildable by external clients

[dependencies]
paychains-sdk = "1.9.2"
spl-memo = { path = "../../memo/program", features = [ "no-entrypoint" ] }
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
spl-token-swap = { path = "../../token-swap/program", features = [ "no-entrypoint" ] }
