[package]
name = "spl-example-custom-heap"
version = "1.0.0"
description = "PayChains Program Library Custom Heap Example"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains-program-library"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
test-bpf = []

[dependencies]
paychains-program = "1.9.2"

[dev-dependencies]
paychains-program-test = "1.9.2"
paychains-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
